--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -1,13 +1,16 @@
 name: eShopOnWeb Build and Test
 
+#Triggers
 on: [push, workflow_dispatch]
 
+#Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   #RESOURCE-GROUP: rg-az400-eshopeonweb-NAME
   RESOURCE-GROUP: rg-az400-eshopeonweb-unaigh
   LOCATION: westeurope
   TEMPLATE-FILE: .azure/bicep/webapp.bicep
   SUBSCRIPTION-ID: 6829b3f6-89a8-4e99-9260-9c1602b2ca33
+  #SUBSCRIPTION-ID: YOUR-SUBS-ID
   #WEBAPP-NAME: az400-webapp-NAME
   WEBAPP-NAME: az400-webapp-unaigh
 
@@ -16,32 +19,36 @@ jobs:
   buildandtest:
     runs-on: ubuntu-latest
     steps:
+    #checkout the repository
     - uses: actions/checkout@v2
+    #prepare runner for desired .net version SDK
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '6.0.x'
         include-prerelease: true
+    #Build/Test/Publish the .net project
     - name: Build with dotnet
       run: dotnet build ./eShopOnWeb.sln --configuration Release
     - name: Test with dotnet
       run: dotnet test ./eShopOnWeb.sln --configuration Release
     - name: dotnet publish
       run: dotnet publish ./src/Web/Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
-      # upload the published website
+    # upload the published website code artifacts
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v3
       with:
         name: .net-app
         path: ${{env.DOTNET_ROOT}}/myapp
         
-    # upload the bicep template for later deploy
+    # upload the bicep template as artifacts for next job
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v3
       with:
         name: bicep-template
         path: ${{ env.TEMPLATE-FILE }}
         
+  # Use Bicep to deploy infrastructure + Publish webapp 
   deploy:
     runs-on: ubuntu-latest
     needs: buildandtest
@@ -57,7 +64,7 @@ jobs:
         name: .net-app
         path: .net-app
   
-    #Download the bicep templates 
+    #Download the bicep templates from previous job
     - name: Download artifact from build job
       uses: actions/download-artifact@v3
       with:
@@ -70,7 +77,7 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
            
-    # Deploy Bicep file
+    # Deploy Azure WebApp using Bicep file
     - name: deploy
       uses: azure/arm-deploy@v1
       with:
